<resources>
	<string name="app_name">Quarantine Tracker</string>

    <string name="action_settings">Settings</string>
    <string name="sun">SUN</string>
	<string name="mon">MON</string>
	<string name="tue">TUE</string>
	<string name="wed">WED</string>
	<string name="thu">THU</string>
	<string name="fri">FRI</string>
	<string name="sat">SAT</string>
	<string name="current_date">You are out of Quarantine</string>
    <string name="your_quarantine_is_over_in">Your Quarantine is over in</string>
    <string name="set_quarantine_date">Set Quarantine End Date</string>
    <string name="exit">Exit</string>
    <string name="fullMonth">Show Full Month</string>
	<string name="halfMonth">Show Half Month</string>
</resources>
